k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loganalyzer-frontend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: loganalyzer-web.lyos.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loganalyzer-frontend
            port:
              number: 3000
